refactor of json parsing to use the new implementation